add  mysql  多实例  - write  by 波波
add  mysql

--- a/salt/nginx/files/nginx.conf
+++ b/salt/nginx/files/nginx.conf
@@ -41,7 +41,7 @@ http {
     gzip_comp_level 4;
     gzip_types       text/plain application/x-javascript text/css application/xml application/json;
     gzip_vary on;
-    include vhosts/*.conf;
+    include conf.d/*.conf;
 
     server {
         listen       80;
